--- a/random_walks.ipynb
+++ b/random_walks.ipynb
@@ -4,14 +4,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook, we introduce how to construct the operations we defined in the previous section using Python and NumPy, both of which are free to use software packages.\n",
-    " \n",
+    "In this notebook, we introduce how to simulate discrete time random walks using Python and NumPy. \n",
+    "This code was used to generate data for quantum inspired music, which can be listened to at: https://bohmelectronic.bandcamp.com/\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "As a first step, we import Numpy, define the number of sites, the starting position and the Hadamard operation, as a $2 \\times 2$ unitary matrix:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -68,21 +75,1044 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We can also initialise our state:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "We can also initialise our state:\n",
-    "\n",
-    "    \\begin{python}\n",
     "C = heads\n",
     "S = np.zeros(sites)\n",
     "S[starting_position] = 1\n",
-    "psi = np.kron(C, S)\n",
-    "\\end{python}\n",
-    "We are now ready to simulate our random walk.\n",
-    "\\begin{python}\n",
+    "psi = np.kron(C, S)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We are now ready to simulate our random walk."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n",
+      "7\n",
+      "4\n",
+      "9\n",
+      "8\n",
+      "11\n",
+      "10\n",
+      "11\n",
+      "4\n",
+      "9\n",
+      "6\n",
+      "13\n",
+      "2\n",
+      "3\n",
+      "6\n",
+      "11\n",
+      "6\n",
+      "3\n",
+      "2\n",
+      "9\n",
+      "2\n",
+      "5\n",
+      "10\n",
+      "9\n",
+      "12\n",
+      "5\n",
+      "8\n",
+      "7\n",
+      "8\n",
+      "13\n",
+      "6\n",
+      "7\n",
+      "2\n",
+      "3\n",
+      "8\n",
+      "1\n",
+      "4\n",
+      "11\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "2\n",
+      "1\n",
+      "10\n",
+      "11\n",
+      "2\n",
+      "11\n",
+      "2\n",
+      "1\n",
+      "0\n",
+      "13\n",
+      "10\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "10\n",
+      "9\n",
+      "2\n",
+      "5\n",
+      "2\n",
+      "3\n",
+      "10\n",
+      "5\n",
+      "0\n",
+      "11\n",
+      "6\n",
+      "11\n",
+      "6\n",
+      "7\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "9\n",
+      "6\n",
+      "11\n",
+      "8\n",
+      "13\n",
+      "6\n",
+      "5\n",
+      "12\n",
+      "1\n",
+      "10\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "4\n",
+      "11\n",
+      "8\n",
+      "3\n",
+      "10\n",
+      "3\n",
+      "12\n",
+      "5\n",
+      "2\n",
+      "1\n",
+      "6\n",
+      "11\n",
+      "10\n",
+      "9\n",
+      "2\n",
+      "7\n",
+      "6\n",
+      "3\n",
+      "0\n",
+      "7\n",
+      "8\n",
+      "1\n",
+      "0\n",
+      "7\n",
+      "8\n",
+      "5\n",
+      "4\n",
+      "3\n",
+      "10\n",
+      "9\n",
+      "10\n",
+      "1\n",
+      "4\n",
+      "3\n",
+      "12\n",
+      "3\n",
+      "12\n",
+      "1\n",
+      "2\n",
+      "13\n",
+      "0\n",
+      "9\n",
+      "4\n",
+      "1\n",
+      "4\n",
+      "9\n",
+      "4\n",
+      "5\n",
+      "4\n",
+      "7\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "7\n",
+      "4\n",
+      "9\n",
+      "10\n",
+      "9\n",
+      "12\n",
+      "11\n",
+      "12\n",
+      "11\n",
+      "12\n",
+      "11\n",
+      "4\n",
+      "7\n",
+      "8\n",
+      "11\n",
+      "6\n",
+      "5\n",
+      "8\n",
+      "11\n",
+      "6\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "10\n",
+      "5\n",
+      "10\n",
+      "1\n",
+      "0\n",
+      "13\n",
+      "8\n",
+      "13\n",
+      "6\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "9\n",
+      "4\n",
+      "7\n",
+      "6\n",
+      "7\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "7\n",
+      "10\n",
+      "3\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "9\n",
+      "0\n",
+      "13\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "1\n",
+      "2\n",
+      "5\n",
+      "10\n",
+      "1\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "11\n",
+      "4\n",
+      "11\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "9\n",
+      "10\n",
+      "7\n",
+      "12\n",
+      "1\n",
+      "10\n",
+      "3\n",
+      "4\n",
+      "7\n",
+      "6\n",
+      "11\n",
+      "10\n",
+      "5\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "3\n",
+      "2\n",
+      "11\n",
+      "12\n",
+      "1\n",
+      "12\n",
+      "5\n",
+      "6\n",
+      "1\n",
+      "6\n",
+      "3\n",
+      "8\n",
+      "3\n",
+      "8\n",
+      "9\n",
+      "4\n",
+      "13\n",
+      "6\n",
+      "7\n",
+      "6\n",
+      "13\n",
+      "0\n",
+      "9\n",
+      "8\n",
+      "9\n",
+      "2\n",
+      "9\n",
+      "10\n",
+      "7\n",
+      "8\n",
+      "5\n",
+      "12\n",
+      "5\n",
+      "6\n",
+      "11\n",
+      "12\n",
+      "5\n",
+      "2\n",
+      "13\n",
+      "10\n",
+      "5\n",
+      "2\n",
+      "11\n",
+      "10\n",
+      "3\n",
+      "12\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "5\n",
+      "8\n",
+      "13\n",
+      "8\n",
+      "5\n",
+      "2\n",
+      "9\n",
+      "2\n",
+      "1\n",
+      "12\n",
+      "13\n",
+      "8\n",
+      "7\n",
+      "2\n",
+      "1\n",
+      "10\n",
+      "9\n",
+      "6\n",
+      "3\n",
+      "10\n",
+      "3\n",
+      "8\n",
+      "5\n",
+      "8\n",
+      "13\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "1\n",
+      "0\n",
+      "13\n",
+      "0\n",
+      "13\n",
+      "10\n",
+      "3\n",
+      "10\n",
+      "5\n",
+      "4\n",
+      "5\n",
+      "8\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "8\n",
+      "9\n",
+      "6\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "2\n",
+      "1\n",
+      "0\n",
+      "13\n",
+      "2\n",
+      "7\n",
+      "2\n",
+      "11\n",
+      "2\n",
+      "3\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "9\n",
+      "4\n",
+      "11\n",
+      "10\n",
+      "3\n",
+      "12\n",
+      "7\n",
+      "12\n",
+      "7\n",
+      "0\n",
+      "9\n",
+      "0\n",
+      "7\n",
+      "2\n",
+      "3\n",
+      "2\n",
+      "5\n",
+      "8\n",
+      "5\n",
+      "12\n",
+      "7\n",
+      "8\n",
+      "7\n",
+      "10\n",
+      "7\n",
+      "10\n",
+      "11\n",
+      "2\n",
+      "11\n",
+      "12\n",
+      "1\n",
+      "10\n",
+      "1\n",
+      "12\n",
+      "5\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "12\n",
+      "5\n",
+      "2\n",
+      "9\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "13\n",
+      "2\n",
+      "5\n",
+      "4\n",
+      "1\n",
+      "0\n",
+      "9\n",
+      "6\n",
+      "1\n",
+      "2\n",
+      "9\n",
+      "8\n",
+      "11\n",
+      "10\n",
+      "11\n",
+      "6\n",
+      "7\n",
+      "2\n",
+      "9\n",
+      "0\n",
+      "3\n",
+      "4\n",
+      "1\n",
+      "4\n",
+      "9\n",
+      "12\n",
+      "5\n",
+      "10\n",
+      "3\n",
+      "6\n",
+      "11\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "8\n",
+      "13\n",
+      "10\n",
+      "3\n",
+      "4\n",
+      "13\n",
+      "8\n",
+      "7\n",
+      "12\n",
+      "3\n",
+      "8\n",
+      "5\n",
+      "8\n",
+      "3\n",
+      "10\n",
+      "3\n",
+      "12\n",
+      "11\n",
+      "10\n",
+      "1\n",
+      "0\n",
+      "11\n",
+      "2\n",
+      "11\n",
+      "2\n",
+      "13\n",
+      "0\n",
+      "1\n",
+      "0\n",
+      "11\n",
+      "6\n",
+      "13\n",
+      "4\n",
+      "9\n",
+      "2\n",
+      "7\n",
+      "6\n",
+      "7\n",
+      "6\n",
+      "9\n",
+      "4\n",
+      "7\n",
+      "12\n",
+      "3\n",
+      "2\n",
+      "13\n",
+      "4\n",
+      "13\n",
+      "2\n",
+      "1\n",
+      "8\n",
+      "7\n",
+      "2\n",
+      "7\n",
+      "2\n",
+      "9\n",
+      "4\n",
+      "5\n",
+      "2\n",
+      "7\n",
+      "10\n",
+      "11\n",
+      "10\n",
+      "5\n",
+      "12\n",
+      "11\n",
+      "2\n",
+      "5\n",
+      "2\n",
+      "1\n",
+      "6\n",
+      "3\n",
+      "2\n",
+      "9\n",
+      "4\n",
+      "5\n",
+      "8\n",
+      "7\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "7\n",
+      "8\n",
+      "7\n",
+      "8\n",
+      "11\n",
+      "2\n",
+      "3\n",
+      "12\n",
+      "7\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "5\n",
+      "6\n",
+      "3\n",
+      "10\n",
+      "9\n",
+      "4\n",
+      "9\n",
+      "2\n",
+      "13\n",
+      "4\n",
+      "7\n",
+      "8\n",
+      "11\n",
+      "10\n",
+      "5\n",
+      "6\n",
+      "13\n",
+      "8\n",
+      "13\n",
+      "4\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "5\n",
+      "6\n",
+      "11\n",
+      "2\n",
+      "11\n",
+      "0\n",
+      "1\n",
+      "10\n",
+      "9\n",
+      "4\n",
+      "11\n",
+      "2\n",
+      "11\n",
+      "2\n",
+      "13\n",
+      "0\n",
+      "3\n",
+      "0\n",
+      "13\n",
+      "2\n",
+      "7\n",
+      "6\n",
+      "13\n",
+      "8\n",
+      "9\n",
+      "6\n",
+      "11\n",
+      "6\n",
+      "13\n",
+      "2\n",
+      "13\n",
+      "12\n",
+      "3\n",
+      "12\n",
+      "5\n",
+      "8\n",
+      "1\n",
+      "6\n",
+      "9\n",
+      "12\n",
+      "1\n",
+      "4\n",
+      "9\n",
+      "10\n",
+      "5\n",
+      "6\n",
+      "9\n",
+      "12\n",
+      "11\n",
+      "10\n",
+      "1\n",
+      "0\n",
+      "11\n",
+      "2\n",
+      "11\n",
+      "0\n",
+      "3\n",
+      "4\n",
+      "11\n",
+      "6\n",
+      "1\n",
+      "8\n",
+      "7\n",
+      "10\n",
+      "5\n",
+      "10\n",
+      "1\n",
+      "6\n",
+      "13\n",
+      "6\n",
+      "7\n",
+      "0\n",
+      "7\n",
+      "0\n",
+      "9\n",
+      "2\n",
+      "11\n",
+      "6\n",
+      "7\n",
+      "10\n",
+      "7\n",
+      "4\n",
+      "11\n",
+      "10\n",
+      "13\n",
+      "8\n",
+      "11\n",
+      "4\n",
+      "9\n",
+      "12\n",
+      "13\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "6\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "4\n",
+      "5\n",
+      "10\n",
+      "11\n",
+      "6\n",
+      "9\n",
+      "2\n",
+      "1\n",
+      "12\n",
+      "7\n",
+      "2\n",
+      "11\n",
+      "10\n",
+      "1\n",
+      "4\n",
+      "7\n",
+      "8\n",
+      "7\n",
+      "4\n",
+      "7\n",
+      "8\n",
+      "1\n",
+      "12\n",
+      "7\n",
+      "0\n",
+      "13\n",
+      "8\n",
+      "9\n",
+      "2\n",
+      "7\n",
+      "4\n",
+      "7\n",
+      "8\n",
+      "5\n",
+      "4\n",
+      "7\n",
+      "6\n",
+      "7\n",
+      "6\n",
+      "7\n",
+      "4\n",
+      "5\n",
+      "10\n",
+      "11\n",
+      "2\n",
+      "11\n",
+      "12\n",
+      "13\n",
+      "12\n",
+      "13\n",
+      "12\n",
+      "11\n",
+      "6\n",
+      "7\n",
+      "6\n",
+      "11\n",
+      "4\n",
+      "1\n",
+      "10\n",
+      "13\n",
+      "10\n",
+      "9\n",
+      "2\n",
+      "3\n",
+      "6\n",
+      "7\n",
+      "12\n",
+      "1\n",
+      "8\n",
+      "13\n",
+      "6\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "0\n",
+      "7\n",
+      "4\n",
+      "7\n",
+      "12\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "10\n",
+      "13\n",
+      "12\n",
+      "1\n",
+      "0\n",
+      "5\n",
+      "6\n",
+      "11\n",
+      "12\n",
+      "3\n",
+      "8\n",
+      "11\n",
+      "12\n",
+      "3\n",
+      "12\n",
+      "11\n",
+      "0\n",
+      "5\n",
+      "8\n",
+      "7\n",
+      "4\n",
+      "7\n",
+      "6\n",
+      "7\n",
+      "10\n",
+      "7\n",
+      "0\n",
+      "3\n",
+      "12\n",
+      "9\n",
+      "12\n",
+      "5\n",
+      "6\n",
+      "3\n",
+      "12\n",
+      "1\n",
+      "2\n",
+      "5\n",
+      "0\n",
+      "9\n",
+      "4\n",
+      "3\n",
+      "10\n",
+      "3\n",
+      "12\n",
+      "5\n",
+      "6\n",
+      "1\n",
+      "6\n",
+      "1\n",
+      "6\n",
+      "7\n",
+      "10\n",
+      "5\n",
+      "6\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "6\n",
+      "5\n",
+      "8\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "2\n",
+      "5\n",
+      "6\n",
+      "9\n",
+      "10\n",
+      "13\n",
+      "12\n",
+      "5\n",
+      "8\n",
+      "9\n",
+      "2\n",
+      "11\n",
+      "10\n",
+      "11\n",
+      "2\n",
+      "13\n",
+      "0\n",
+      "1\n",
+      "10\n",
+      "5\n",
+      "2\n",
+      "5\n",
+      "4\n",
+      "5\n",
+      "4\n",
+      "7\n",
+      "6\n",
+      "7\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "3\n",
+      "8\n",
+      "3\n",
+      "6\n",
+      "13\n",
+      "10\n",
+      "7\n",
+      "0\n",
+      "1\n",
+      "0\n",
+      "1\n",
+      "2\n",
+      "5\n",
+      "6\n",
+      "1\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "3\n",
+      "12\n",
+      "11\n",
+      "8\n",
+      "3\n",
+      "8\n",
+      "7\n",
+      "0\n",
+      "13\n",
+      "0\n",
+      "7\n",
+      "12\n",
+      "1\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "5\n",
+      "0\n",
+      "9\n",
+      "2\n",
+      "7\n",
+      "6\n",
+      "9\n",
+      "12\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "11\n",
+      "10\n",
+      "3\n",
+      "0\n",
+      "13\n",
+      "12\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "2\n",
+      "11\n",
+      "4\n",
+      "7\n",
+      "6\n",
+      "3\n",
+      "8\n",
+      "9\n",
+      "10\n",
+      "5\n",
+      "12\n",
+      "13\n",
+      "6\n",
+      "5\n",
+      "8\n",
+      "9\n",
+      "2\n",
+      "1\n",
+      "6\n",
+      "9\n",
+      "4\n",
+      "5\n",
+      "8\n",
+      "1\n",
+      "6\n",
+      "7\n",
+      "0\n",
+      "1\n",
+      "12\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "10\n",
+      "11\n",
+      "4\n",
+      "13\n",
+      "0\n",
+      "5\n",
+      "4\n",
+      "7\n",
+      "6\n",
+      "5\n",
+      "4\n",
+      "1\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "11\n",
+      "4\n",
+      "13\n",
+      "6\n",
+      "5\n",
+      "12\n",
+      "7\n",
+      "2\n",
+      "7\n",
+      "10\n",
+      "9\n",
+      "4\n",
+      "7\n",
+      "4\n",
+      "11\n",
+      "12\n",
+      "3\n",
+      "10\n",
+      "3\n",
+      "12\n",
+      "9\n",
+      "12\n",
+      "13\n",
+      "10\n",
+      "1\n",
+      "2\n",
+      "1\n",
+      "4\n",
+      "3\n",
+      "6\n",
+      "5\n",
+      "6\n",
+      "11\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "7\n",
+      "8\n",
+      "5\n",
+      "8\n",
+      "11\n",
+      "4\n",
+      "13\n",
+      "12\n",
+      "5\n",
+      "0\n",
+      "11\n",
+      "2\n",
+      "7\n",
+      "10\n",
+      "3\n",
+      "8\n",
+      "7\n",
+      "8\n",
+      "7\n",
+      "2\n",
+      "9\n",
+      "10\n",
+      "11\n",
+      "12\n",
+      "3\n",
+      "2\n",
+      "1\n",
+      "0\n",
+      "13\n",
+      "10\n",
+      "1\n",
+      "2\n",
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
     "classical = False\n",
     "steps = 1000\n",
     "for i in range(steps):\n",
@@ -98,9 +1128,14 @@
     "        S = np.zeros(sites)\n",
     "        S[pos] = 1\n",
     "        C = heads\n",
-    "        psi = np.kron(C, S)\n",
-    "\\end{python}\n",
-    "If we set the variable \\verb|classical| to \\verb|True|, then we see that we collapse our system after each measurement to the observed outcome, recovering the classical dynamics."
+    "        psi = np.kron(C, S)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If we set the variable `classical` to `True`, then we see that we collapse our system after each measurement to the observed outcome, recovering the classical dynamics."
    ]
   }
  ],
